[ADD] /unownalldoors, sell all your doors at once!
[ADD] rp_droppocketonarrest, drop pocket items on arrest.
[ADD] Showing whether someone has a gunlicense above their heads
[ADD] MySQL support!
[ADD] Support for 3D voice chat!
[ADD] rp_adminvehicles and rp_adminnpc, restrict vehicles and NPC's!
[ADD] rp_pricemin, set minimum price of entities.
[FIX] // not working in letters
[FIX] Disabling RP names not working clientside
[FIX] Weapon checker resetting ammo
[FIX] Gunlicense buttons in F4
[FIX] Shipment issues
[FIX] Pocket glitch
[FIX] drop pickup get ammo glitch
[FIX] Sitting incorrectly in vehicles
[FIX] Switchjob not working when player can't change job for some reason
[FIX] Modules not working when folder name was changed
[FIX] Jail positions not saving
[FIX] Compatability with extra seats in VUMod
[FIX] animations to work with latest update
[FIX] Staying on fire when respawning after money printer explosion
[FIX] Pressing E on a gun you can't pick up making it pick up on walk over it (hard to explain lol)
[FIX] Saving original steam names in the database
[FIX] Door issue: random other people co-owning it when one co-owner is added.
[FIX] Meteor emitter spam
[CHANGE] Microphone GUI layout. It's way more RP'ish now!
[CHANGE] Credits, added Eusion
[CHANGE] The way Entities like money and money printers show their information. Thanks MavBear!
[CHANGE] Made a lot of functions local, this will give you better overall performance both on server and client
[CHANGE] Stunstick damage to prevent abuse. Left click: no damage, right click: 10 damage
[CHANGE] F1 help text
[CHANGE] Made it so you have to press E on dropped weapons to pick them up
[CHANGE] It doesn't remove vehicles anymore when you change job.
[CHANGE] Made lockpicking time random
[CHANGE] Weapon checker to take a while to confiscate weapons
[CHANGE] Made warrant possible on arrest
[CHANGE] Made it so group doors need to have at least one warranted owner for it to be opened with battering ram